--- a/action.yml
+++ b/action.yml
@@ -33,8 +33,11 @@ runs:
       run: |
         sudo apt-get install -y -qq clang gcc g++ zlib1g-dev libmpc-dev libmpfr-dev libgmp-dev
         git clone https://github.com/tpoechtrager/osxcross "$GITHUB_ACTION_PATH/osxcross"
-        
+        # Check setup for osx version
+
+
         FILE_NAME="MacOSX${{ inputs.osx-version }}.sdk.tar.xz"
+        # Check joseluisq/macosx-sdks for release
         wget -nc "https://github.com/joseluisq/macosx-sdks/releases/download/${{ inputs.osx-version }}/${FILE_NAME}" -O "$GITHUB_ACTION_PATH/osxcross/tarballs/${FILE_NAME}"
 
     - uses: actions/cache@v3
@@ -49,7 +52,9 @@ runs:
       env:
         SDK_VERSION: "${{ inputs.osx-version }}"
         UNATTENDED: "yes"
-      run: bash ./build.sh
+      run: |
+        cd "$GITHUB_ACTION_PATH/osxcross"
+        bash ./build.sh
 
     - shell: bash
       run: |
