--- a/action.yml
+++ b/action.yml
@@ -32,16 +32,29 @@ runs:
     - shell: bash
       id: target
       run: |
+        echo "::group::Installing Deps"
         sudo apt-get install -y -qq clang gcc g++ zlib1g-dev libmpc-dev libmpfr-dev libgmp-dev
-        git clone https://github.com/tpoechtrager/osxcross "$GITHUB_ACTION_PATH/osxcross"
+        echo "::endgroup::"
+
+        OSXCROSS_FOLDER="$(echo "$GITHUB_ACTION_PATH/osxcross" | sed 's/.\///')"
+
+        echo "::group::Cloning osxcross"
+        git clone https://github.com/tpoechtrager/osxcross "$OSXCROSS_FOLDER"
+        echo "::endgroup::"
+
+
         # Check setup for osx version
 
-
+        echo "::group::Fetching macosx SDK"
         FILE_NAME="MacOSX${{ inputs.osx-version }}.sdk.tar.xz"
-        # Check joseluisq/macosx-sdks for release
-        wget -nc "https://github.com/joseluisq/macosx-sdks/releases/download/${{ inputs.osx-version }}/${FILE_NAME}" -O "$GITHUB_ACTION_PATH/osxcross/tarballs/${FILE_NAME}"
 
-        echo "::set-output name=target::$(echo "$GITHUB_ACTION_PATH/osxcross/target" | sed 's/.\///')"
+        # Check joseluisq/macosx-sdks for release
+        wget -nc "https://github.com/joseluisq/macosx-sdks/releases/download/${{ inputs.osx-version }}/${FILE_NAME}" -O "$OSXCROSS_FOLDER/tarballs/${FILE_NAME}"
+        echo "::endgroup::"
+
+
+        echo "Folder=${OSXCROSS_FOLDER}"
+        echo "::set-output name=target::${OSXCROSS_FOLDER}/target"
 
 
     - uses: actions/cache@v3
