--- a/action.yml
+++ b/action.yml
@@ -106,9 +106,9 @@ runs:
           echo "$(find "$OSXCROSS_FOLDER/target/bin" -name "$1")"
         }
 
-        LINKER_FILE="$(findTarget "x86_64-apple-darwin*-linker")"
+        LINKER_FILE="$(findTarget "x86_64-apple-darwin*-clang")"
         AR_FILE="$(findTarget "x86_64-apple-darwin*-ar")"
         echo "::endgroup::"
 
         echo "Setting: CARGO_TARGET_X86_64_APPLE_DARWIN_RUSTFLAGS=\"-C linker=${AR_FILE} -C linker=${LINKER_FILE} -C link-arg=-undefined -C link-arg=dynamic_lookup\""
-        echo "CARGO_TARGET_X86_64_APPLE_DARWIN_RUSTFLAGS=\"-C linker=${AR_FILE} -C linker=${LINKER_FILE} -C link-arg=-undefined -C link-arg=dynamic_lookup\"" >> $GITHUB_ENV
+        echo "CARGO_TARGET_X86_64_APPLE_DARWIN_RUSTFLAGS=\"-C ar=${AR_FILE} -C linker=${LINKER_FILE} -C link-arg=-undefined -C link-arg=dynamic_lookup\"" >> $GITHUB_ENV
