--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -20,7 +20,7 @@ jobs:
         run: git clone https://github.com/mbround18/rs-simple-hello-world
     
       - name: Build Hello World
-        working_directory: ./rs-simple-hello-world 
+        working-directory: ./rs-simple-hello-world 
         run: cargo build --release --target x86_64-apple-darwin
         
           
