--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -24,7 +24,7 @@ jobs:
         run: cargo build --release --target x86_64-apple-darwin
 
       - name: Grab Binary
-        uses: actions/upload@v3
+        uses: actions/upload-artifact@v3
         with:
           name: hello-world
           path: ./rs-simple-hello-world/target/x86_64-apple-darwin/release/hello_world
