--- a/action.yml
+++ b/action.yml
@@ -1,7 +1,11 @@
 name: "Setup osxcross"
 author: mbround18
 description: Setup osxcross for rust/other compilation projects.
-icon: aperture
+branding:
+  icon: 'aperture'  
+  color: 'green'
+
+
 inputs:
   osx-version:
     description: "Version of osx to use."
