--- a/action.yml
+++ b/action.yml
@@ -70,7 +70,7 @@ runs:
         wget -nc "https://github.com/joseluisq/macosx-sdks/releases/download/${{ inputs.osx-version }}/${FILE_NAME}" -O "$OSXCROSS_FOLDER/tarballs/${FILE_NAME}"
         echo "::endgroup::"
 
-        echo "::set-output name=target::${OSXCROSS_FOLDER}/target"
+        echo "OSXCROSS_TARGET=${OSXCROSS_FOLDER}/target" >> $GITHUB_ENV
 
     - uses: actions/cache@v3
       id: cache
@@ -79,7 +79,7 @@ runs:
         path: |
           ~/.cargo/registry
           ~/.cargo/git
-          ${{ steps.target.outputs.target }}
+          ${{ env.OSXCROSS_TARGET }}
           ${{ env.OSXCROSS_FOLDER }}/target/bi
           
 
