--- a/action.yml
+++ b/action.yml
@@ -82,7 +82,7 @@ runs:
 
     - name: Restore Cached Osxcross Build 
       id: cache-restore
-    - uses: actions/cache/restore@v3.2.3
+      uses: actions/cache/restore@v3.2.3
       with:
         path: |
           ~/.cargo/registry
@@ -110,7 +110,7 @@ runs:
     - name: Cache Osxcross Build 
       if: steps.cache-restore.outputs.cache-hit != 'true'
       id: cache-save
-    - uses: actions/cache/save@v3.2.3
+      uses: actions/cache/save@v3.2.3
       with:
         path: |
           ~/.cargo/registry
