--- a/action.yml
+++ b/action.yml
@@ -102,7 +102,7 @@ runs:
           echo "Error! Failed to find ${OSXCROSS_FOLDER}/target/bin folder!"
           exit 1
         else
-          chmod +x $OSXCROSS_FOLDER/target/bin/*
+          sudo chmod +x $OSXCROSS_FOLDER/target/bin/*
         fi
         echo "::endgroup::"
 
